--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <script src="js/jquery-2.2.4.min.js"></script>
     <script src="js/login.js"></script>
     <script src="js/horario.js"></script>
-    <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" />
-    <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
-    <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script>
+    <!-- <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.1/themes/base/jquery-ui.css" /> -->
+    <!-- <script src="http://code.jquery.com/jquery-1.9.1.js"></script> -->
+    <!-- <script src="http://code.jquery.com/ui/1.10.1/jquery-ui.js"></script> -->
     <LINK REL=StyleSheet HREF="style.css" TYPE="text/css" MEDIA=screen />
     <style>
         table {
